  Reported by Fury (#0001575).
- Moved the SQLINE system (and ban nick) to TKL and introduced "holds"
  suggested by Certus
- Minor fix for previous.
- Improved 'viruschan' spamfilter target:
  - better msg after the forced join
  - +oaq's in set::spamfilter::virus-help-channel receive a notice about
    which filter the user matched.
  - it disables all commands except PONG, ADMIN, and msg/notices to
    set::spamfilter::virus-help-channel.
- Made snomask +S also show the spamfilter reason field.
- Added class::pingfreq checking, should be 30-600 now.. else you might
  get mysterious (mass) disconnect issues.
- Lol, I made /connect dissapear during modulizing ;).
- Added a warning if your listen portrange affects >100 ports
  (eg for idiots doing 6667-7000 which uses 333 sockets).
- Added some extra debugging for tkl update notice...
- Fixed a problem in 'tkl update': lowest expire time won instead of
  highest. Reported by Malcolm.
- Fixed a tkl update problem with sqlines
- Improved dcc blocking support (both for spamfilter and deny dcc).
- '0' tkltime in spamfilter now really means 'perm', not '*line for
  0 seconds' or something. Reported by Certus.
- Fixed a bug in individual m_*.so loading, 39 new modules were affected.
- Fixed an issue where chanmode +f was often set by the server again
  in a netjoin when there was no need to (nothing to synch).
- Added spamfilter::except which allows you to specify targets
  (eg: channels) where spamfilter should not take action. Requested by Fury
  (#0001586). Ex: set { spamfilter { except "#spamreport,#help"; }; };
- Fixed a zero-terminate bug in remote includes: urls with '?' in it could
  cause a crash, reported by Joolz (#0001587).
- Made numerics 518-520 a bit more clear by mentioning the channelname in it.
  Suggested by Zell (#0001589).
- Fixed a bug reported by Joolz that would cause problems when deleting a remote
  included file from a server (#0001587).