@@ -2983,3 +2983,4 @@ seen. gmtime warning still there
   Suggested by Zell (#0001589).
 - Fixed a bug reported by Joolz that would cause problems when deleting a remote
   included file from a server (#0001587).
+- Fixed a few more remote include problems on Windows
